compreview/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  labels:
    app: hello-app
    name: hello-app
  namespace: compreview-install
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
      name: hello-app
  template:
    metadata:
      labels:
        app: hello-app
        name: hello-app
    spec:
      containers:
      - name: hello-app
        image: example-registry-quay-registry.apps.cluster-7nn69.dynamic.redhatworkshops.io/quayadmin/hello-world-nginx/hello-app:v1.0
---
