compreview/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-app
  labels:
    app: hello-app
    name: hello-app
  namespace: compreview-install
spec:
  host: hello-app.apps.cluster-7nn69.dynamic.redhatworkshops.io
  subdomain: ''
  to:
    kind: Service
    name: hello-app
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
---
